fixed settings issue

--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -54,25 +54,25 @@
 				    	<div class="card-header d-flex align-items-center justify-content-between ">
 							<a class="small text-white col-center" href="#">PEEP<small>[cmH20]</small></a>
 					    </div>
-					    <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "peep"></span></div>
+					    <div class="card-body px-1 py-1 tiny"><span id = "peep"></span></div>
 					</div>
 				    <div class="card-reading">
 				    	<div class="card-header d-flex align-items-center justify-content-between ">
 						<a class="small text-white col-center" href="#">&lt;P<sub>plateau</sub>&gt;<small>[cmH20]</small></a>
 					    </div>
-					    <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "plateau_pressure"></span></div>
+					    <div class="card-body px-1 py-1 tiny"><span id = "plateau_pressure"></span></div>
 					</div>
 				    <div class="card-reading">
 				    	<div class="card-header d-flex align-items-center justify-content-between  ">
 							<a class="small text-white col-center" href="#">RR</small></a>
 					    </div>
-						<div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="respiratory_rate"></span></div> 
+						<div class="card-body px-1 py-1 tiny"><span id="respiratory_rate"></span></div> 
 				    </div>
 				    <div class="card-reading">
 				    	<div class="card-header d-flex align-items-center justify-content-between ">
 						<a class="small text-white col-center" href="#">FIO<sub>2</sub> <small>[%]</small></a>
 					    </div>
-					    <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "fiO2_percent"></span></div>
+					    <div class="card-body px-1 py-1 tiny"><span id = "fiO2_percent"></span></div>
 					</div>
 				    <div class="card-reading">
 		            	<div class="card-header d-flex align-items-center justify-content-between">
@@ -100,31 +100,31 @@
 						<div class="card-header d-flex align-items-center justify-content-between">
 							<a class="small text-dark col-center" href="#">PEEP <small>[cmH2O]</small></a>
 						</div>
-						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_peep" value=0.0 onclick="show_easy_numpad(this,new input_controller('PEEP',this))"></div> 
+						<div class="card-body px-1 py-1 tiny"><input class = "lockable" id = "setting_peep" value=0.0 onclick="show_easy_numpad(this,new input_controller('PEEP',this))"></div> 
 					</div>
 					<div class="card-setting">
 						<div class="card-header d-flex align-items-center justify-content-between">
 							<a class="small text-dark col-center" href="#">P<sub>insp</sub> <small>[cmH20]</small></a>
 						</div>
-						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_inspiratory_pressure" value=0.0 onclick="show_easy_numpad(this,new input_controller('INSPIRATORY_PRESSURE',this))"></div> 
+						<div class="card-body px-1 py-1 tiny"><input class = "lockable" id = "setting_inspiratory_pressure" value=0.0 onclick="show_easy_numpad(this,new input_controller('INSPIRATORY_PRESSURE',this))"></div> 
 					</div>
 					<div class="card-setting">
 						<div class="card-header d-flex align-items-center justify-content-between">
 							<a class="small text-dark col-center" href="#">RR</a>
 						</div>
-						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_respiratory_rate" value=0.0 onclick="show_easy_numpad(this, new input_controller('RESPIRATORY_RATE',this));"></input></div> 
+						<div class="card-body px-1 py-1 tiny"><input class = "lockable" id = "setting_respiratory_rate" value=0.0 onclick="show_easy_numpad(this, new input_controller('RESPIRATORY_RATE',this));"></input></div> 
 					</div>
 					<div class="card-setting">
 						<div class="card-header d-flex align-items-center justify-content-between">
 							<a class="small text-dark col-center" href="#">FIO<sub>2</sub> <small>[%]</small></a>
 						</div>
-						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_fiO2_percent" value=0.0 onclick="show_easy_numpad(this,new input_controller('FIO2',this))"></div> 
+						<div class="card-body px-1 py-1 tiny"><input class = "lockable" id = "setting_fiO2_percent" value=0.0 onclick="show_easy_numpad(this,new input_controller('FIO2',this))"></div> 
 					</div>
 					<div class="card-setting">
 						<div class="card-header d-flex align-items-center justify-content-between">
 							<a class="small text-dark col-center" href="#">Inhale Time <small>[s]</small></a>
 						</div>
-						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_inhale_time" value = 0.0 onclick = "show_easy_numpad(this, new input_controller('INHALE_TIME',this))"></div> 
+						<div class="card-body px-1 py-1 tiny"><input class = "lockable" id = "setting_inhale_time" value = 0.0 onclick = "show_easy_numpad(this, new input_controller('INHALE_TIME',this))"></div> 
 					</div>
 					<!--  hidden for now KH
 					<div class="card-setting">
