--- a/raspberry-backend/templates/base.html
+++ b/raspberry-backend/templates/base.html
@@ -261,22 +261,22 @@
 	
 	function update_alarms() {
       $.getJSON("live-alarms", function (data) {
-	     if (data != null && data.length > 0 && data[0].alarm_type == 'PRIORITY_HIGH') {
-	        document.getElementById("alarms").innerHTML = "High priority: " + data[0].alarm_code;
+	     if (data.alarm_type == 'PRIORITY_HIGH') {
+	        document.getElementById("alarms").innerHTML = "High priority: " + data.alarm_code;               
 	        var el = document.getElementById("alarm_ul");
 	        el.classList.add("alarm-red");
 	        var el2 = document.getElementById("path-alarm");
 	        el2.classList.add("path-icon-alarm");
 		  } 
-		  if (data != null && data.length > 0 && data[0].alarm_type == 'PRIORITY_MEDIUM') {
-	        document.getElementById("alarms").innerHTML = "Medium priority: " + data[0].alarm_code;
+		  if (data.alarm_type == 'PRIORITY_MEDIUM') {
+	        document.getElementById("alarms").innerHTML = "Medium priority: " + data.alarm_code;
 	        var el = document.getElementById("alarm_ul");
 	        el.classList.add("alarm-red");
 	        var el2 = document.getElementById("path-alarm");
 	        el2.classList.add("path-icon-alarm");
           }		  
-		  if (data != null && data.length > 0 && data[0].alarm_type == 'PRIORITY_LOW') {
-	        document.getElementById("alarms").innerHTML = "Low priority: " + data[0].alarm_code;
+		  if (data.alarm_type == 'PRIORITY_LOW') {
+	        document.getElementById("alarms").innerHTML = "Low priority: " + data.alarm_code;
 	        var el = document.getElementById("alarm_ul");
 	        el.classList.add("alarm-red");
 	        var el2 = document.getElementById("path-alarm");
@@ -290,7 +290,7 @@
 	      }    
 	  });
 	}
-	//var alarmInterval = setInterval('update_alarms()', 1000);
+	var alarmInterval = setInterval('update_alarms()', 1000);
 	
 
 	function unlock(){
