--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -42,53 +42,85 @@
 					    <input type="button" class="lockable sb-nav-button" name="pause" value="Freeze" onclick="togglePause()" disabled>
 					</div>
 			    </div>
-			  </div>
-	     	<div class = "col-cards-main">
-				 <div class = "row no-gutters">
-					<div class = "main-header">
-						Measurement
-					</div>
-				 </div>
-				<div class = "row no-gutters">
-				    <div class="card-reading">
-				    	<div class="card-header d-flex align-items-center justify-content-between ">
-							<a class="small text-white col-center" href="#">PEEP<small>[cmH20]</small></a>
-					    </div>
-					    <div class="card-body px-1 py-1 tiny"><span id = "peep"></span></div>
-					</div>
-				    <div class="card-reading">
-				    	<div class="card-header d-flex align-items-center justify-content-between ">
-						<a class="small text-white col-center" href="#">&lt;P<sub>plateau</sub>&gt;<small>[cmH20]</small></a>
-					    </div>
-					    <div class="card-body px-1 py-1 tiny"><span id = "plateau_pressure"></span></div>
-					</div>
-				    <div class="card-reading">
-				    	<div class="card-header d-flex align-items-center justify-content-between  ">
-							<a class="small text-white col-center" href="#">RR</small></a>
-					    </div>
-						<div class="card-body px-1 py-1 tiny"><span id="respiratory_rate"></span></div> 
-				    </div>
-				    <div class="card-reading">
-				    	<div class="card-header d-flex align-items-center justify-content-between ">
-						<a class="small text-white col-center" href="#">FIO<sub>2</sub> <small>[%]</small></a>
-					    </div>
-					    <div class="card-body px-1 py-1 tiny"><span id = "fiO2_percent"></span></div>
-					</div>
-				    <div class="card-reading">
-		            	<div class="card-header d-flex align-items-center justify-content-between">
-							<a class="small text-white col-center" href="#">VTE <small>[mL]</small></a>
-			            </div>
-			            <div class="card-body px-1 py-1 tiny"><span id = "exhaled_tidal_volume">0.0</span></div>
-				    </div>
-					<div class="card-reading">
-		            	<div class="card-header d-flex align-items-center justify-content-between">
-							<a class="small text-white col-center" href="#">MVE <small>[L/min]</small></a>
-			            </div>
-		            	<div class="card-body px-1 py-1 tiny"><span id = "exhaled_minute_volume">0.0</span></div>
+				<div class = "row">
+					<div class="col-settings-row">
+						<div class="card-setting">
+							<div class="card-body tiny"><input class = "lockable" id = "setting_peep" value=0.0 size=5 onclick="show_easy_numpad(this,new input_controller('PEEP',this))"></div> 
+							<div class="card-footer d-flex align-items-center justify-content-between">
+							<a class="small text-dark col-center" href="#">PEEP <small>[cmH2O]</small></a>
+							</div>
+						</div> 
+						<div class="card-setting">
+							<div class="card-body tiny"><input class = "lockable" id = "setting_inspiratory_pressure" size=5 value=0.0 onclick="show_easy_numpad(this,new input_controller('INSPIRATORY_PRESSURE',this))"></div> 
+							<div class="card-footer d-flex align-items-center justify-content-between">
+								<a class="small text-dark col-center" href="#">P<sub>insp</sub> <small>[cmH20]</small></a>
+							</div>
+						</div>
+						
+						<div class="card-setting">
+							<div class="card-body tiny"><input class = "lockable" id = "setting_respiratory_rate" size=5 value=0.0 onclick="show_easy_numpad(this, new input_controller('RESPIRATORY_RATE',this));"></input></div> 
+							<div class="card-footer d-flex align-items-center justify-content-between"><a class="small text-dark col-center" href="#">RR</a></div>
+						</div>
+						
+						<div class="card-setting">
+							<div class="card-body tiny"><input class = "lockable" id = "setting_fiO2_percent" size=5 value=0.0 onclick="show_easy_numpad(this,new input_controller('FIO2',this))"></div> 
+							<div class="card-footer d-flex align-items-center justify-content-between">
+								<a class="small text-dark col-center" href="#">FIO<sub>2</sub> <small>[%]</small></a>
+							</div>
+
+						</div>
+						
+						<div class="card-setting">
+							<div class="card-body tiny"><input class = "lockable" id = "setting_inhale_time" size=5 value = 0.0 onclick = "show_easy_numpad(this, new input_controller('INHALE_TIME',this))"></div> 
+
+							<div class="card-footer d-flex align-items-center justify-content-between">
+								<a class="small text-dark col-center" href="#">Inhale Time <small>[s]</small></a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-			
+			<div class = "col-cards-main">
+				<div class = "row no-gutters">
+				    <div class="card-reading">
+				    	<div class="card-header text-align-center">
+							<a class="small text-white col-center" href="#">PEEP<small>[cmH20]</small></a>
+					    </div>
+					    <div class="card-body tiny"><span id = "peep">0.0</span></div>
+					</div>
+				    <div class="card-reading">
+				    	<div class="card-header text-align-center">
+						<a class="small text-white col-center" href="#">&lt;P<sub>plateau</sub>&gt;<small>[cmH20]</small></a>
+					    </div>
+					    <div class="card-body tiny"><span id = "plateau_pressure">0.0</span></div>
+					</div>
+				    <div class="card-reading">
+				    	<div class="card-header text-align-center">
+							<a class="small text-white col-center" href="#">RR</small></a>
+					    </div>
+						<div class="card-body tiny"><span id="respiratory_rate">0.0</span></div> 
+				    </div>
+				    <div class="card-reading">
+				    	<div class="card-header text-align-center">
+						<a class="small text-white col-center" href="#">FIO<sub>2</sub> <small>[%]</small></a>
+					    </div>
+					    <div class="card-body tiny"><span id = "fiO2_percent">0.0</span></div>
+					</div>
+				    <div class="card-reading">
+		            	<div class="card-header text-align-center">
+							<a class="small text-white col-center" href="#">VTE <small>[mL]</small></a>
+			            </div>
+			            <div class="card-body tiny"><span id = "exhaled_tidal_volume">0.0</span></div>
+				    </div>
+					<div class="card-reading">
+		            	<div class="card-header text-align-center">
+							<a class="small text-white col-center" href="#">MVE <small>[L/min]</small></a>
+			            </div>
+		            	<div class="card-body tiny"><span id = "exhaled_minute_volume">0.0</span></div>
+					</div>
+				</div>
+			</div>
+			<!--
 			<div class = "col-settings-main">
 				<div class = "row">
 					<div class = "main-header text-dark">
@@ -126,6 +158,7 @@
 						</div>
 						<div class="card-body px-1 py-1 tiny"><input class = "lockable" id = "setting_inhale_time" value = 0.0 onclick = "show_easy_numpad(this, new input_controller('INHALE_TIME',this))"></div> 
 					</div>
+					-->
 					<!--  hidden for now KH
 					<div class="card-setting">
 						<div class="card-header d-flex align-items-center justify-content-between">
@@ -133,11 +166,11 @@
 						</div>
 						<div class="card-body px-1 py-1 tiny"><input class = "lockable" id = "setting_pid_gain" value=0.0 onclick="show_easy_numpad(this,new input_controller('PID_GAIN',this))"></div> 
 					</div>
-					-->
+					
 
 
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 
