--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -18,19 +18,19 @@
 	    <div class = "row no-gutters">
 	      	<div class = "col-charts-main">
 				<!-- chart on left -->
-			    <div class="row">
-					<div class="col-md-12">
-					    <div class = "main-chart-container"><canvas id="pressure_chart"></canvas></div>
+			    <div class="row py-0">
+					<div class="col-md-12 py-0">
+					    <div class = "main-chart-container-noaxis"><canvas id="pressure_chart"></canvas></div>
 					</div>
 			    </div>
-			    <div class = "row no-gutters">
-					<div class="col-md-12">
-					  <div class="main-chart-container"><canvas id="flow_chart"></canvas></div>
+			    <div class = "row py-0">
+					<div class="col-md-12 py-0">
+					  <div class="main-chart-container-noaxis"><canvas id="flow_chart"></canvas></div>
 					</div>
 		    	</div>
-			    <div class = "row no-gutters">
-					<div class="col-md-12">
-						  <div class = "main-chart-container"><canvas id="volume_chart"></canvas></div>
+			    <div class = "row py-0">
+					<div class="col-md-12 py-0">
+						  <div class = "main-chart-container-withaxis"><canvas id="volume_chart"></canvas></div>
 					</div>
 			    </div>
 			    <div class = "row">
