--- a/raspberry-backend/templates/logs.html
+++ b/raspberry-backend/templates/logs.html
@@ -29,6 +29,7 @@
 
     <div class="tab">
       <button class="tablinks" onclick="openTab(this, 'Main',false)">Main</button>
+      <button class="tablinks" onclick="openTab(this, 'history',false)">History</button>
       <button class="tablinks" onclick="openTab(this, 'clinicalAlarms',false)">Clinical Alarms</button>
       <button class="tablinks" onclick="openTab(this, 'technicalAlarms',false)">Technical Alarms</button>
 
@@ -36,14 +37,43 @@
 
     <div id="Main" class="tabcontent">
 
-    <input type="button" class="form-control py-2" value="Update alarms" id="update_button"></input>
+    <!--<input type="button" class="form-control py-2" value="Update alarms" id="update_button"></input>-->
     <!-- <button type="button" class="form-control py-2" id="ack_alarms">Acknowledge all alarms</button> -->
 
 
-      <table id="HEV_logs" class="text-white">
+    <table id="active_alarms" class="text-white tiny alarmlog w-100">
+      <thead>
+          <tr>
+              <th>Start Date and time</th>
+              <th></th>
+
+              <th>Alarm type</th>
+              <th>Alarm code</th>
+              <!-- <th>Acknowledgement</th> -->
+
+
+          </tr>
+      </thead>
+      <tbody>
+          <tr>
+
+          </tr>
+      </tbody>
+      <tfoot>
+          <tr>
+              
+          </tr>
+      </tfoot>
+  </table>
+</div>
+<div id="history" class = "tabcontent">
+
+      <table id="inactive_alarms" class="text-white tiny alarmlog w-100">
         <thead>
             <tr>
-                <th>Date and time</th>
+                <th>Start Date and time</th>
+                <th>End Date and time</th>
+
                 <th>Alarm type</th>
                 <th>Alarm code</th>
                 <!-- <th>Acknowledgement</th> -->
@@ -170,29 +200,87 @@ function convertTimestamp(timestamp) {
          + ' &emsp; ' +	 h + ":" + m + ":" + s; ;
 }
 
+//to keep track of last called alarms to check for new ones
+var alarmrowid = 0;
+/* this is a list of active alarm ROWID so we don't have to replicate the whole thing every time */
+var active_alarm_rows  = [];
 
 function requestAlarms() {
   $.getJSON({
-      url: '/live-alarms',
+      url: '/active-alarms',
       success: function(data) {
-        console.log(data[0].alarm_code);
-         if (data[0].alarm_code != "") {
-            console.log(data.alarms);
-            var table = document.getElementById("HEV_logs");
+        var table = document.getElementById("active_alarms");
+        /* keep a list of the latest row ids to check against and remove inactive later */
+        var latest_rows = [];
+        for (let i = 0 ; i < data.length; i++){
+          latest_rows.push(data[i].ROWID);
+          if ( active_alarm_rows.includes(data[i].ROWID) ){
+            // do nothing, we already are showing the active alarm
+          }
+          else{
+             if (data[i].alarm_code != "") {
+              var row = table.insertRow(1);
+              row.id = 'active-alarm-'+data[i].ROWID;
+              var cell1 = row.insertCell(0);
+              var cell2 = row.insertCell(1);
+              var cell3 = row.insertCell(2);
+              var cell4 = row.insertCell(3);
+            
+              //cell1.innerHTML = convertTimestamp(data.created_at)
+              cell1.innerHTML = convertTimestamp(data[i].start_timestamp);
+              //cell2.innerHTML = convertTimestamp(data[i].timestamp);
+              //cell2.innerHTML = data[i].ROWID;
+              cell3.innerHTML = data[i].alarm_type;            
+              cell4.innerHTML = data[i].alarm_code;
+              //cell4.innerHTML =  '<button type="button" class="form-control py-2" id="ack"   style="background-color:#1f4793; border-color:blue; color:white">Ack</button>';
+              active_alarm_rows.push(data[i].ROWID);
+              
+           }
+         }
+        }
+        //check if any of the active alarms are not in the latest haul, if not remove
+        
+        //do this so we can remove after
+        var toRemove = [];
+
+        for ( let i = 0 ; i < active_alarm_rows.length; i++ ) {
+          var value = active_alarm_rows[i];
+          if (!(latest_rows.includes(value))) {
+            var elem = document.getElementById("active-alarm-"+value); elem.parentNode.removeChild(elem);
+            toRemove.push(value);
+          }
+        }
+        for ( let i = 0 ; i < toRemove.length; i++){
+          const index = active_alarm_rows.indexOf(toRemove[i]);
+          active_alarm_rows.splice(index, 1);
+        }
+      },
+      cache: false
+  });
+
+  $.getJSON({
+      url: '/log-alarms/'+alarmrowid,
+      success: function(data) {
+        var table = document.getElementById("inactive_alarms");
+        if (data.length > 0) {
+          alarmrowid = data[0].ROWID;
+        }
+        for (let i = 0 ; i < data.length; i++){
+         if (data[i].alarm_code != "") {
             var row = table.insertRow(1);
             var cell1 = row.insertCell(0);
             var cell2 = row.insertCell(1);
             var cell3 = row.insertCell(2);
-            //var cell4 = row.insertCell(3);
+            var cell4 = row.insertCell(3);
 
 
             //cell1.innerHTML = convertTimestamp(data.created_at)
-            cell1.innerHTML = convertTimestamp(data[0].timestamp);
-            console.log(data[0].timestamp);
-            cell2.innerHTML = data[0].alarm_type;            
-            cell3.innerHTML = data[0].alarm_code;
+            cell1.innerHTML = convertTimestamp(data[i].start_timestamp);
+            cell2.innerHTML = convertTimestamp(data[i].timestamp);
+            cell3.innerHTML = data[i].alarm_type;            
+            cell4.innerHTML = data[i].alarm_code;
             //cell4.innerHTML =  '<button type="button" class="form-control py-2" id="ack"   style="background-color:#1f4793; border-color:blue; color:white">Ack</button>';
-
+         }
          }
          
       },
@@ -200,17 +288,17 @@ function requestAlarms() {
   });
    // call it again after one second
    alarmLogs = setTimeout(requestAlarms, 1000);
-
 }
 
-
+/*
 function update_logs() {
     //clearInterval(alarmInterval);
     requestAlarms();
 }
-
+*/
 var button_state = false;
 
+/*
 document.getElementById('update_button').onclick = function(){
   if (button_state == false) {
     this.style.color = "white";
@@ -226,7 +314,7 @@ document.getElementById('update_button').onclick = function(){
     clearInterval(alarmLogs);
   }
 }
-
+*/
 
 
 function set_alarm_threshold(var_name, var_min, var_max) {
@@ -255,6 +343,10 @@ submit_thresholds = function(element){
 
 {% block body_scripts %}
 <script>
+
+$(document).ready( function (){
+  requestAlarms();
+});
 
 function openTab(el, cityName) {
  if (el.disabled && (!force)) return;
